--- a/_posts/2021-07-23-agatha_0-1.md
+++ b/_posts/2021-07-23-agatha_0-1.md
@@ -10,22 +10,25 @@ source: Logo par <a href="https://www.instagram.com/threo.nine/">Threo.nine</a> 
 
 ## Pour qui ? 
 
-Pour toute personne souhaitant alléger la charge mentale que représente ses finances, assurer sa stabilité financière et mettre son argent au service de ses projets les plus fous ! 
+Pour toute personne souhaitant
+-  alléger la charge mentale que représente ses finances,
+-  assurer sa stabilité financière, en particulier dans cette période de crise
+- et mettre son argent au service de ses projets les plus fous ! achat de sa résidence, création de son entreprise, voyage etc.. (partagez les vôtres en commentaire !)
 
 ## Pourquoi ? 
 Parce que l'on a tendance à limiter la gestion de l'argent à "Dépenser moins pour avoir plus" (de quoi ?) ou "On ne vit qu'une fois" (mais est ce une raison pour prendre des risques inutiles ?)
-Agatha est là pour vous donner une vision claire de votre situation et vous redonner le contrôle sur votre argent. 
-Pour un exemple personnel, rendez vous sur l'article : [Pourquoi j'aime tant mon budget]("../pourquoi-budget")
 
-## Comment faire partie de la première vague d'utilisateur ?
+Agatha est là pour vous donner une vision claire de votre situation et vous redonner le contrôle sur votre argent. 
+Pour un exemple personnel, rendez vous sur l'article : [Pourquoi j'aime tant mon budget](../pourquoi-budget)
 
 ## Les avantages ?
 Avant tout, bénéficier dès maintenant de l'énorme atout que représente la maitrise de votre argent.
+
 Mais en bonus : 
 - normalement accessible via un abonnement de 8€/mois, le service restera **gratuit** jusqu'à décembre 2021 inclus pour les **10 premiers** utilisateurs. Et d'ici là, croyez moi, il aura largement auto-financé le prix de sa licence pour 2022.
-- faisant partie de la première vague, vos retours seront prépondérants dans le choix des prochaines fonctionnalités, l'occasion idéale d'accèder à un outil à votre image.
+- faisant partie de la première vague, vos retours seront prépondérants dans le choix des prochaines fonctionnalités, l'occasion idéale pour obtenir à terme l'outil parfait pour Vous.
 
-## Où s'inscrire ?
+## Comment faire partie de la première vague d'utilisateurs ?
 
 Contactez moi :
 
