--- a/_posts/2021-07-23-agatha_0-1.md
+++ b/_posts/2021-07-23-agatha_0-1.md
@@ -4,6 +4,7 @@ title:  "Agatha Budget - Version 0.1"
 categories: [agatha, logiciel ]
 image: assets/images/posts/agatha_0-1.png
 source: Logo par <a href="https://www.instagram.com/threo.nine/">Threo.nine</a> pour <a href="http://agatha-budget.fr">Agatha Budget</a> </br> Image par <a href="https://pixabay.com/fr/users/stocksnap-894430/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=698521">StockSnap</a> de <a href="https://pixabay.com/fr/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=698521">Pixabay</a>
+hidden: true
 ---
 
 # Roulement de tambours.... la première version du logiciel Agatha Budget est en service ! 
