--- a/_posts/2021-07-23-agatha_0-1.md
+++ b/_posts/2021-07-23-agatha_0-1.md
@@ -13,7 +13,7 @@ featured: true
 ## Pour qui ? 
 
 Pour toute personne souhaitant
--  alléger la charge mentale que représente ses finances,
+-  alléger la charge mentale que représentent ses finances,
 -  assurer sa stabilité financière, en particulier dans cette période de crise
 - et mettre son argent au service de ses projets les plus fous ! achat de sa résidence, création de son entreprise, voyage etc.. (partagez les vôtres en commentaire !)
 
@@ -24,7 +24,7 @@ Agatha est là pour vous donner une vision claire de votre situation et vous red
 Pour un exemple personnel, rendez vous sur l'article : [Pourquoi j'aime tant mon budget](../pourquoi-budget)
 
 ## Les avantages ?
-Avant tout, bénéficier dès maintenant de l'énorme atout que représente la maitrise de votre argent.
+Avant tout, bénéficiez dès maintenant de l'énorme atout que représente la maitrise de votre argent.
 
 Mais en bonus : 
 - normalement accessible via un abonnement de 8€/mois, le service restera **gratuit** jusqu'à décembre 2021 inclus pour les **10 premiers** utilisateurs. Et d'ici là, croyez moi, il aura largement auto-financé le prix de sa licence pour 2022.
