--- a/_posts/2021-07-16-pub_reco.md
+++ b/_posts/2021-07-16-pub_reco.md
@@ -7,12 +7,12 @@ source: Image par <a href="https://pixabay.com/fr/users/publicdomainpictures-14/
 ---
 
 Quand on parle de publicité, c'est aux principes de manipulation qu'il faut s'intéresser. 
-Sur quel levier émotionnel ou social essaye-t'elle de jouer ? l'argument d'autorité ? la communauté ? la rareté ? l'ego ? etc..
+Sur quel levier émotionnel ou social essaye-t-elle de jouer ? L'argument d'autorité ? La communauté ? La rareté ? L'ego ? Etc..
 
-Connaitre ces techniques, c'est se donner la possibilité de les identifier et de contrer au mieux leur effet sur notre inconscient. Ainsi nous pouvons analyser le message présenté de façon plus rationnelle et décider pour nous-même si cela nous intéresse
+Connaitre ces techniques, c'est se donner la possibilité de les identifier et de contrer au mieux leur effet sur notre inconscient. Ainsi nous pouvons analyser le message présenté de façon plus rationnelle et décider pour nous-mêmes si cela nous intéresse.
 
-[Horizon Gull](https://www.youtube.com/c/horizongull) est la chaine Youtube officielle du site [Hacking Social](https://www.hacking-social.com). Elle propose des vidéos de vulgarisations qui explorent les structures sociales et les mécanismes sur lesquelles elles reposent.
+[Horizon Gull](https://www.youtube.com/c/horizongull) est la chaine YouTube officielle du site [Hacking Social](https://www.hacking-social.com). Elle propose des vidéos de vulgarisations qui explorent les structures sociales et les mécanismes sur lesquels elles reposent.
 
-La série XP notamment dans un format plus court que leurs vidéos traditionnelles, présente dans chaque épisode un principe en particulier (le biais d'attribution, le rapport à la rareté, la technique du pied dans la porte) et la façon dont il est parfois exploité.
+La série XP présente dans chaque épisode un principe en particulier (le biais d'attribution, le rapport à la rareté, la technique du pied dans la porte) et la façon dont il est parfois exploité.
 
 Sur ce sujet de la publicité, je vous recommande la vidéo ["... Il aura la femme. Mythologie publicitaire de la voiture"](https://www.youtube.com/watch?v=1JQE4YZS1Cg&t=997s). Ils utilisent en particulier l'exemple des publicités pour voitures (les plus gros annonceurs) pour comprendre la démarche des publicitaires (historique, motivation, logo, musique). Préparez-vous à être surpris, il pourrait bien vous donner envie d'acheter un caillou !
