--- a/_posts/2021-07-28-don-a-qui.md
+++ b/_posts/2021-07-28-don-a-qui.md
@@ -6,22 +6,22 @@ image: assets/images/posts/4-2-img.png
 source: Image modifiée à partir de <a href="https://pixabay.com/fr/users/openclipart-vectors-30363/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=153336">OpenClipart-Vectors</a> de <a href="https://pixabay.com/fr/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=153336">Pixabay</a>
 ---
 
-Au moment de choisir à qui donner, nous sommes souvent confrontés à des dizaines de choix. Des associations locale, caritatives, des proches, des actions ponctuelle ou des virements réguliers.
+Au moment de choisir à qui donner, nous sommes souvent confrontés à des dizaines de choix. Des associations locales, caritatives, des proches, des actions ponctuelles ou des virements réguliers.
 
-Tout d'abord sachez que ce n'est pas forcément leur rendre service que de soutenir trop de projets.
-On peut identifier deux types d'associations : celles qui agissent et ont surtout besoin de moyens, celles qui militent et ont surtout besoin de poids
+Tout d’abord, sachez que ce n’est pas forcément leur rendre service que de soutenir trop de projets.
+On peut identifier deux types d’associations : celles qui agissent et ont surtout besoin de moyens, celles qui militent et ont surtout besoin de poids
 
-Pour les premières, la complexité de la gestion augmente avec le nombre de donneurs. Il est plus simple pour eux de gérer un nombre plus réduit de donneurs plus importants qu'un grand nombre de petits donneurs qui devront être traités individuellement.
-De même, un versement mensuel leur sera plus bénéfique qu'un versement total en une seule fois. En effet, même si toute somme supplémentaires est la bienvenue, ils peuvent plus facilement prévoir des actions en se basant sur des entrées d'argents régulières venant de donneur sur lesquels ils savent pouvoir compter qu'en étant soumis à des périodes de fastes et de diète, selon les versements inattendus qu'ils reçoivent.
+Pour les premières, la complexité de la gestion augmente avec le nombre de donneurs. Il est plus simple pour eux de gérer un nombre plus réduit de donneurs plus importants qu’un grand nombre de petits donneurs qui devront être traités individuellement.
+De même, un versement mensuel leur sera plus bénéfique qu’un versement total en une seule fois. En effet, même si toute somme supplémentaire est la bienvenue, ils peuvent plus facilement prévoir des actions en se basant sur des entrées d’argent régulières venant de donneurs sur lesquels ils savent pouvoir compter qu’en étant soumis à des périodes de fastes et de diète, selon les versements inattendus qu’ils reçoivent.
 
-Pour les suivantes, cette complexité est identique mais nécessaire pour leur permettre de revendiquer auprès de leurs interlocuteurs que leur cause est soutenue par un public large.
+Pour les suivantes, cette complexité est identique, mais nécessaire pour leur permettre de revendiquer auprès de leurs interlocuteurs que leur cause est soutenue par un public large.
 
-Je vous conseille donc de donner la majorité de votre budget don à une association ayant besoin de moyens et de donner en parallèle une somme symbolique à celles qui ont besoin de mettre en avant leur nombre de donneurs
+Je vous conseille donc de donner la majorité de votre budget don à une association ayant besoin de moyens. En parallèle vous pourrez ensuite donner une somme symbolique à celles qui ont besoin de mettre en avant leur nombre de donneurs.
 
 Quant à savoir à qui donner, la cause est un choix très personnel sur lequel je vous conseille de prendre le temps de réfléchir pour que vous puissiez vous engager à la soutenir dans la durée.
 
-Pour la même raison, une fois le domaine choisi, n'hésitez pas à faire des recherches sur les différents acteurs du sujet voire si cela est possible de participer bénévolement à des actions sur le terrain qui vous permettront de mieux réaliser les besoins et l'impact que votre aide peut avoir.
+Pour la même raison, une fois le domaine choisi, n’hésitez pas à faire des recherches sur les différents acteurs du sujet. Si cela est possible, participez bénévolement à des actions sur le terrain qui vous permettront de mieux réaliser les besoins et l’impact que votre aide peut avoir.
 
-Petite anecdote personnelle, lorsque j'ai pris la décision de faire un don régulier, j'ai décidé d'une somme à mettre de côté chaque mois en attendant d'avoir fait mon choix et que j'ai ensuite entièrement versée lorsqu'il a été fait. Si vous sentez que votre indécision se prolonge je vous conseille de faire la même chose pour vous pousser au passage à l'acte et ne pas priver l'association de l'aide que votre temps de recherche bien que nécessaire a repoussée !
+Petite anecdote personnelle, lorsque j’ai pris la décision de faire un don régulier, j’ai décidé d’une somme à mettre de côté chaque mois en attendant d’avoir fait mon choix. Je l’ai ensuite entièrement versée lorsqu’il a été fait. Si vous sentez que votre indécision se prolonge, je vous conseille de faire la même chose. Cela vous poussera au passage à l’acte et permettra de ne pas priver l’association de l’aide que votre temps de recherche bien que nécessaire a repoussée !
 
-Et vous ? Partagez en commentaire les associations que vous avez décidez de soutenir !
+Et vous ? Partagez en commentaire les associations que vous avez décidé de soutenir !
