--- a/_posts/2021-07-23-agatha_0-1.md
+++ b/_posts/2021-07-23-agatha_0-1.md
@@ -7,7 +7,6 @@ source: Logo par <a href="https://www.instagram.com/threo.nine/">Threo.nine</a> 
 hidden: true
 featured: true
 ---
-
 # Roulement de tambours.... la première version du logiciel Agatha Budget est en service ! 
 
 ## Pour qui ? 
@@ -15,24 +14,24 @@ featured: true
 Pour toute personne souhaitant
 -  alléger la charge mentale que représentent ses finances,
 -  assurer sa stabilité financière, en particulier dans cette période de crise
-- et mettre son argent au service de ses projets les plus fous ! achat de sa résidence, création de son entreprise, voyage etc.. (partagez les vôtres en commentaire !)
+- et mettre son argent au service de ses projets les plus fous ! achat de sa résidence, création de son entreprise, voyage, etc.. (partagez les vôtres en commentaire !)
 
 ## Pourquoi ? 
-Parce que l'on a tendance à limiter la gestion de l'argent à "Dépenser moins pour avoir plus" (de quoi ?) ou "On ne vit qu'une fois" (mais est ce une raison pour prendre des risques inutiles ?)
+Parce que l'on a tendance à limiter la gestion de l'argent à "Dépenser moins pour avoir plus" (de quoi ?) ou "On ne vit qu'une fois" (mais est-ce une raison pour prendre des risques inutiles ?)
 
 Agatha est là pour vous donner une vision claire de votre situation et vous redonner le contrôle sur votre argent. 
-Pour un exemple personnel, rendez vous sur l'article : [Pourquoi j'aime tant mon budget](../pourquoi-budget)
+Pour un exemple personnel, rendez-vous sur l'article : [pourquoi j'aime tant mon budget](../pourquoi-budget)
 
 ## Les avantages ?
 Avant tout, bénéficiez dès maintenant de l'énorme atout que représente la maitrise de votre argent.
 
 Mais en bonus : 
-- normalement accessible via un abonnement de 8€/mois, le service restera **gratuit** jusqu'à décembre 2021 inclus pour les **10 premiers** utilisateurs. Et d'ici là, croyez moi, il aura largement auto-financé le prix de sa licence pour 2022.
+- normalement accessible via un abonnement de 8€/mois, le service restera **gratuit** jusqu'à décembre 2021 inclus pour les **10 premiers** utilisateurs. Et d'ici là, croyez-moi, il aura largement autofinancé le prix de sa licence pour 2022.
 - faisant partie de la première vague, vos retours seront prépondérants dans le choix des prochaines fonctionnalités, l'occasion idéale pour obtenir à terme l'outil parfait pour Vous.
 
 ## Comment faire partie de la première vague d'utilisateurs ?
 
-Contactez moi :
+Contactez-moi :
 
 - via l'espace contact du site [agatha-budget.fr](http://agatha-budget.fr/individual/) 
 ou 
