add sentence to article

--- a/_posts/2021-08-04-createur.md
+++ b/_posts/2021-08-04-createur.md
@@ -20,7 +20,7 @@ En faisant les courses, j’ai envie de confiture et me dirige instinctivement v
 Constatant l’impact positif sur ses ventes MamieConfiture renouvelle son contrat avec Vidéos .com
 
 Le problème : 
-Dans ce schéma, Alicia et moi ne sont que des pions dans l’arrangement négocié entre MamieConfiture et Vidéos .com. En considérant que je peux choisir de me retirer de l’équation en activant mon bloqueur de publicité, les intérêts d’Alicia eux ne sont pas représentés. Son travail n’est pas encadré par la loi et l’intérêt de Vidéos .com se limite à la « dédommager ». Ils doivent la payer suffisamment pour qu’elle continue a produire le contenu dont il a besoin, mais suffisamment peu pour limiter au maximum le cout vis-à-vis de ses propres bénéfices.
+Dans ce schéma, Alicia et moi ne sont que des pions dans l’arrangement négocié entre MamieConfiture et Vidéos .com. En considérant que je peux choisir de me retirer de l’équation en activant mon bloqueur de publicité, les intérêts d’Alicia eux ne sont pas représentés. Son travail n’est pas encadré par la loi et l’intérêt de Vidéos .com se limite à la « dédommager ». Ils doivent la payer suffisamment pour qu’elle continue a produire le contenu dont il a besoin, mais suffisamment peu pour limiter au maximum le cout vis-à-vis de ses propres bénéfices. Et si elle doit pour cela travailler de nuit après un autre travail... et bien c'est qu'elle le fait par passion non ?
 
 **Cas 2 : les sponsors**
 
