videosite replace videocom

--- a/_posts/2021-08-04-createur.md
+++ b/_posts/2021-08-04-createur.md
@@ -15,23 +15,23 @@ J’ai parlé dans un [article précédent](../pub_article) des méfaits de la p
 
 Je regarde la vidéo d’Alicia de « La cuisine d’Alicia » et pour la soutenir je désactive le bloqueur de publicité
 MamieConfiture me présente alors une toute nouvelle gamme de parfums exotiques
-Vidéos.com verse une somme d’argent à Alicia puisque c’est grâce à elle qu’ils ont pu me faire regarder la publicité.
+VidéosSite verse une somme d’argent à Alicia puisque c’est grâce à elle qu’ils ont pu me faire regarder la publicité.
 En faisant les courses, j’ai envie de confiture et me dirige instinctivement vers le visage familier de MamieConfiture
-Constatant l’impact positif sur ses ventes MamieConfiture renouvelle son contrat avec Vidéos .com
+Constatant l’impact positif sur ses ventes MamieConfiture renouvelle son contrat avec VidéosSite
 
 Le problème : 
-Dans ce schéma, Alicia et moi ne sont que des pions dans l’arrangement négocié entre MamieConfiture et Vidéos .com. En considérant que je peux choisir de me retirer de l’équation en activant mon bloqueur de publicité, les intérêts d’Alicia eux ne sont pas représentés. Son travail n’est pas encadré par la loi et l’intérêt de Vidéos .com se limite à la « dédommager ». Ils doivent la payer suffisamment pour qu’elle continue a produire le contenu dont il a besoin, mais suffisamment peu pour limiter au maximum le cout vis-à-vis de ses propres bénéfices. Et si elle doit pour cela travailler de nuit après un autre travail... et bien c'est qu'elle le fait par passion non ?
+Dans ce schéma, Alicia et moi ne sont que des pions dans l’arrangement négocié entre MamieConfiture et Vidéos .com. En considérant que je peux choisir de me retirer de l’équation en activant mon bloqueur de publicité, les intérêts d’Alicia eux ne sont pas représentés. Son travail n’est pas encadré par la loi et l’intérêt de VidéosSite se limite à la « dédommager ». Ils doivent la payer suffisamment pour qu’elle continue a produire le contenu dont il a besoin, mais suffisamment peu pour limiter au maximum le cout vis-à-vis de ses propres bénéfices. Et si elle doit pour cela travailler de nuit après un autre travail... et bien c'est qu'elle le fait par passion non ?
 
 **Cas 2 : les sponsors**
 
-Pour compléter ses revenus, un autre modèle est possible pour Alicia : les sponsors. Dans ce cas, c’est Vidéos .com qui est exclu de l’équation et je deviens le seul pion. D’un côté, j’ai la possibilité de passer les sections où Alicia me vante les mérites de la confiture, d’un autre le respect que j’ai pour elle multiplie l’impact de la publicité dans mon subconscient. Ce mode de rémunération est bien meilleur pour Alicia et Mamie Confiture, mais pour moi c’est au contraire la pire des « solutions ».
+Pour compléter ses revenus, un autre modèle est possible pour Alicia : les sponsors. Dans ce cas, c’est VidéosSite qui est exclu de l’équation et je deviens le seul pion. D’un côté, j’ai la possibilité de passer les sections où Alicia me vante les mérites de la confiture, d’un autre le respect que j’ai pour elle multiplie l’impact de la publicité dans mon subconscient. Ce mode de rémunération est bien meilleur pour Alicia et Mamie Confiture, mais pour moi c’est au contraire la pire des « solutions ».
 
 **Cas 3 : les abonnements**
 
-D’un autre côté, Vidéos .com a également tout à gagner à retirer MamieConfiture de l’équation, devenant ainsi seul maitre à bord. Au lieu de dépendre de publicitaire, il est plus efficient de me demander de lui verser directement mon argent sous forme d’un abonnement. Je deviens un client et non plus un produit pour l’entreprise. Mes intérêts sont donc plus susceptibles d’être pris en compte et je ne subis plus (ou en tout cas moins) de manipulation visant à me faire générer de l’argent à mon insu. Cependant pour Alicia les termes restent les mêmes que dans le cas de la publicité.
+D’un autre côté, VidéosSite a également tout à gagner à retirer MamieConfiture de l’équation, devenant ainsi seul maitre à bord. Au lieu de dépendre de publicitaire, il est plus efficient de me demander de lui verser directement mon argent sous forme d’un abonnement. Je deviens un client et non plus un produit pour l’entreprise. Mes intérêts sont donc plus susceptibles d’être pris en compte et je ne subis plus (ou en tout cas moins) de manipulation visant à me faire générer de l’argent à mon insu. Cependant pour Alicia les termes restent les mêmes que dans le cas de la publicité.
 
 
-Dans les trois cas… la présence de Vidéos .com et de MamieConfiture a également un autre impact : leur capacité à censurer. Ils ont entièrement la main sur les contenus qu’ils hébergent et sponsorisent (directement ou indirectement via la plateforme). À ce titre toute prise de position allant contre leurs intérêts pourra être retirée ou démonétisée, obligeant le créateur à se plier à leurs exigences sous peine de perdre sa source de revenus. L’effet pourra même aller au-delà des exigences établies, car le créateur sera susceptible de s’autocensurer pour ne pas prendre de risque sur des sujets incertains et faire fuir certains publicitaires. 
+Dans les trois cas… la présence de VidéosSite et de MamieConfiture a également un autre impact : leur capacité à censurer. Ils ont entièrement la main sur les contenus qu’ils hébergent et sponsorisent (directement ou indirectement via la plateforme). À ce titre toute prise de position allant contre leurs intérêts pourra être retirée ou démonétisée, obligeant le créateur à se plier à leurs exigences sous peine de perdre sa source de revenus. L’effet pourra même aller au-delà des exigences établies, car le créateur sera susceptible de s’autocensurer pour ne pas prendre de risque sur des sujets incertains et faire fuir certains publicitaires. 
 
 
 Je profite de ce poste pour préciser que mes recommandations hebdomadaires ne sont pas sponsorisées ;) Je me contente de partager des liens que je trouve intéressants pour aller plus loin dans le thème de la semaine. 
