--- a/_posts/2021-07-23-agatha_0-1.md
+++ b/_posts/2021-07-23-agatha_0-1.md
@@ -14,7 +14,7 @@ featured: true
 Pour toute personne souhaitant
 -  alléger la charge mentale que représentent ses finances,
 -  assurer sa stabilité financière, en particulier dans cette période de crise
-- et mettre son argent au service de ses projets les plus fous ! achat de sa résidence, création de son entreprise, voyage, etc.. (partagez les vôtres en commentaire !)
+- et mettre son argent au service de ses projets les plus fous ! achat de sa résidence, remboursement de ses dettes, création de son entreprise, voyage, etc.. (partagez les vôtres en commentaire !)
 
 ## Pourquoi ? 
 Parce que l'on a tendance à limiter la gestion de l'argent à "Dépenser moins pour avoir plus" (de quoi ?) ou "On ne vit qu'une fois" (mais est-ce une raison pour prendre des risques inutiles ?)
@@ -26,7 +26,7 @@ Pour un exemple personnel, rendez-vous sur l'article : [pourquoi j'aime tant mon
 Avant tout, bénéficiez dès maintenant de l'énorme atout que représente la maitrise de votre argent.
 
 Mais en bonus : 
-- normalement accessible via un abonnement de 8€/mois, le service restera **gratuit** jusqu'à décembre 2021 inclus pour les **10 premiers** utilisateurs. Et d'ici là, croyez-moi, il aura largement autofinancé le prix de sa licence pour 2022.
+- normalement accessible via un abonnement de 8€/mois, le service restera à **1€/mois** jusqu'à décembre 2021 inclus pour les **10 premiers** utilisateurs. Et d'ici là, croyez-moi, il aura largement autofinancé le prix de sa licence pour 2022.
 - faisant partie de la première vague, vos retours seront prépondérants dans le choix des prochaines fonctionnalités, l'occasion idéale pour obtenir à terme l'outil parfait pour Vous.
 
 ## Comment faire partie de la première vague d'utilisateurs ?
